<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_name">Spotify Streamer</string>
    <string name="scores_name">Football Scores App</string>
    <string name="library_name">Library App</string>
    <string name="bigger_name">Build It Bigger</string>
    <string name="reader_name">XYZ Reader</string>
    <string name="capstone_name">Capstone</string>

    <string name="toast_message">This button will launch</string>

    <string name="action_settings">Settings</string>
</resources>
