<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_spotify"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_name"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast" />

    <Button
        android:id="@+id/button_scores"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_name"
        android:layout_below="@+id/button_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast"  />

    <Button
        android:id="@+id/button_library"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/library_name"
        android:layout_below="@+id/button_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast"  />

    <Button
        android:id="@+id/button_bigger"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/bigger_name"
        android:layout_below="@+id/button_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast"  />

    <Button
        android:id="@+id/button_reader"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/reader_name"
        android:layout_below="@+id/button_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast"  />

    <Button
        android:id="@+id/button_capstone"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone_name"
        android:layout_below="@+id/button_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="buttonShowToast"  />

</RelativeLayout>
